# zxRebornClock

./: README.md
firmware/configurator/: EasySerial.py  SerialPortFinder.py  zxrc_configurator.py
firmware/source/: .cproject  .gitignore  .project  .template  CMakeLists.txt  CMakeLists.txt.1  CMakeLists.txt.2  Readme.cmake  riscv.cmake  zxRebornClock.launch  zxRebornClock.wvproj
firmware/source/Peripheral/inc/: ch32x035_usb.h
firmware/source/include/core/: Button.hpp  ButtonConf.hpp  ClockToggler.hpp  Delayer.hpp  DelayerNop.hpp  Led.hpp  LedConf.hpp  Mcu.hpp  Pin.hpp  PinDir.hpp  PinMode.hpp  PinRx.hpp  PinRxConf.hpp  PinTx.hpp  PinTxConf.hpp  PortClockToggler.hpp  PortName.hpp  PortPin.hpp  PortPinConf.hpp  PrintConf.hpp  Types.hpp  Uart.hpp  UartConf.hpp  UartName.hpp
firmware/source/include/ds1302/: ClockHalt.hpp  Command.hpp  Data.hpp  Date.hpp  Day.hpp  Direction.hpp  Hour.hpp  HourMode.hpp  Meridiem.hpp  Minutes.hpp  Month.hpp  Register.hpp  Seconds.hpp  Target.hpp  Transfer.hpp  Types.hpp  WriteProtect.hpp  Year.hpp
firmware/source/src/: Anodes.cpp  Anodes.hpp  BlueLed.cpp  BlueLed.hpp  Cathodes.cpp  Cathodes.hpp  CePin.cpp  CePin.hpp  Configurator.cpp  Configurator.hpp  Counter.cpp  Counter.hpp  DigitExtractor.hpp  DisplayTime.cpp  DisplayTime.hpp  Esp12f.cpp  Esp12f.hpp  EspCommand.cpp  EspCommand.hpp  EspReceiveBuffer.cpp  EspReceiveBuffer.hpp  FlashSettings.cpp  FlashSettings.hpp  Gpio.cpp  Gpio.hpp  GpioModeCalc.cpp  GpioModeCalc.hpp  GreenLed.cpp  GreenLed.hpp  Hour.cpp  Hour.hpp  InternetTime.cpp  InternetTime.hpp  IoPin.cpp  IoPin.hpp  Key.cpp  Key.hpp  KeyBlock.cpp  KeyBlock.hpp  KeyBlockEvent.hpp  (+63 more)
firmware/source/src/core/: Button.cpp  ButtonConf.cpp  ButtonPinConf.cpp  ButtonPinConf.hpp  ClockToggler.cpp  Delayer.cpp  Gpio.cpp  Gpio.hpp  GpioModeCalc.cpp  GpioModeCalc.hpp  Led.cpp  LedConf.cpp  LedPinConf.cpp  LedPinConf.hpp  Mcu.cpp  Pin.cpp  PinConf.cpp  PinHolder.hpp  PinRx.cpp  PinRxConf.cpp  PinTx.cpp  PinTxConf.cpp  PortClockToggler.cpp  PortHolder.cpp  PortHolder.hpp  PortPin.cpp  PortPinConf.cpp  PrintConf.cpp  RccApb2Holder.cpp  RccApb2Holder.hpp  RccPortHolder.cpp  RccPortHolder.hpp  RccUsartHolder.cpp  RccUsartHolder.hpp  Uart.cpp  Uart.hpp  UartConf.cpp  Usart.cpp  Usart.hpp  UsartHolder.cpp  (+1 more)
firmware/source/src/ds1302/: Command.cpp  Data.cpp  Date.cpp  Day.cpp  Hour.cpp  Minutes.cpp  Month.cpp  Seconds.cpp  WriteProtect.cpp  Year.cpp
firmware/source/tests/: .gitignore  CMakeLists.txt  test.cpp
firmware/source/tests/cmake/: FindUnitTest++.cmake
kicad/: .gitignore
kicad/zxRebornClock/: .gitignore  fp-info-cache  ibom.config.ini  in14-clock.kicad_sym  sym-lib-table  zxRebornClock.kicad_pcb  zxRebornClock.kicad_prl  zxRebornClock.kicad_pro  zxRebornClock.kicad_sch
kicad/zxRebornClock/Library.pretty/: 12v_200v.kicad_mod  L_D8mm_P3mm.kicad_mod  TRIM_3362P-1-103.kicad_mod  logo.kicad_mod  ИН-14.kicad_mod
